Add logger and validation
